src/main/webapp/less/CustomFilterNumber.less
@import "utils";
// --------- CustomFilterNumber --------- //
.CustomFilterNumber {
	.editContainer{
		.operation{
			float:left;
			margin: 10px 0 15px 20px;
			width:100px;
			padding:0;
			box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.5);
			border-radius: 4px;
			.operation-item{
				list-style-type: none;
				background:#fff;
				cursor:pointer;
				font-size:13px;
				padding: 2px 4px;
				&:first-child{
					border-top-left-radius:4px;
					border-top-right-radius:4px;
				}
				&.active{
					background-color:#00a4a8;
					color:#fff;
				}
			}
		}
		.input-containers{
			width:100px;
			float:left;
			margin:4px 0 15px 20px;
			input{
				width:100%;
				margin-top:10px;
				text-align:center;
				border:1px solid #c7c7c7;
				border-radius:4px;
				color:#00a4a8;
				box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
			}
			.alert{
				padding:0;
				margin:0;
				font-size:12px;
			}
		}
		.btnApplyValue{
			float:right;
			margin: 48px 14px 0 14px;
			background: #00a4a8;
			color:#fff;
			border-radius:4px;
			padding:4px 20px;
			cursor:pointer;
		}
		
	}
	.viewContainer{
		.operValue{
			font-size:13px;
			float:left;
			margin:15px 0 0 30px;
		}
		
		.value-containers{
			width:100px;
			float:left;
			margin:4px 0 15px 20px;
			.value{
				margin-top:10px;
				text-align:center;
				border-radius:4px;
				color:#fff;
				background-color: #00a4a8;
				padding:3px;
			}
		}
	}
		
	.cb {
		clear: both;
	}

}
// --------- /CustomFilterNumber --------- //

